--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@tiptap/extension-color": "^3.12.0",
+    "@tiptap/extension-image": "^3.12.0",
+    "@tiptap/extension-link": "^3.12.0",
+    "@tiptap/extension-text-align": "^3.12.0",
+    "@tiptap/extension-text-style": "^3.12.0",
+    "@tiptap/extension-underline": "^3.12.0",
+    "@tiptap/react": "^3.12.0",
+    "@tiptap/starter-kit": "^3.12.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
