--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma": "^5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "supabase": "^2.47.11",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
